# WorldFoundry

./: .gitattributes  2026-04-10-worldfoundry-iffcomp-format.md
docs/investigations/: 2026-04-11-iffcomp-go-rewrite.md  2026-04-11-iffcomp-modernization.md  2026-04-11-iffcomp-rs-rewrite.md  2026-04-11-wftools-rewrite-analysis.md  2026-04-13-blender-to-cd-iff-pipeline.md  2026-04-13-oas-oad-format.md  2026-04-13-showas-coverage.md
scripts/: md-to-pdf.sh
wfdocs/: ChangeLog  LICENSE  Production Pathway.dia  README  TODO
wfi3dplugins/: AUTHORS  Makefile.am  Makefile.dist  README  config.h.in  configure.in
wfi3dplugins/AttribPlugin/: Makefile.am  attribplugin.cpp  attribplugin.h  attribplugin.ui  moc_cribdialog.cpp  profile.cc  profile.hp  wfattribdata.cc  wfattribdata.hp
wfi3dplugins/GeometryExportPlugin/: Makefile.am  geometryexport.cpp  geometryexport.h
wfi3dplugins/LevelExportPlugin/: Makefile.am  wfattribdata.cc  wflevelexport.cpp  wflevelexport.h
wfi3dplugins/m4/: gl.m4  i3d.m4  nurbs.m4  qt.m4  x11.m4
wflevels/: cvsaddr  levels.txt
wflevels/3dtext/: 3dtext.lev  3dtext.max  box01.iff  cone01.iff  g_hedgeb.tga  matte.map  matte.tga  sphere01.iff  text01.iff
wflevels/bubba/: ram.iff.txt
wflevels/cubemenu/: cube.iff  cubemenu.lev  cubemenu.max  five.tga  matte.map  one.tga  two.tga
wflevels/primitives/: asset.inc  geosphere01.iff  matte.tga  objects.id  primitives.lev  primitives.max  ram.iff.txt
wflevels/snowgoons/: G_Bark.tga  G_DoorF.tga  G_DoorFg.tga  G_HedgeWsnow.tga  G_HedgeWsnowSide.tga  G_HedgeWsnowTp.tga  G_LogCabinLogs.tga  G_LogCabinLogs2.tga  G_LogCabinLogsBlueDk.tga  G_LogCabinLogsBlueS.tga  (+51 more)
wfmaxplugins/: libs.txt  makefile  makefile.def  makefile.inc  max plugins.dsw  todo.txt
wfsource/: CHANGELOG  Doxyfile  GNUMakefile.bld  GNUMakefile.env  GNUMakefile.linux  GNUMakefile.rul  GNUmakefile  Makefile  Makefile.psx  Makefile.rul  Makefile.template  Makefile.win  Production Pathway.ps  README  README.linux  README.windows  TODO  buildall.bat  buildpsx.bat  buildwin.bat  import.bat  libraryhierarchy.dia  libraryhierarchy.ps  makefile.bld  makefile.env  psx.ini  regset.bat
wftools/: CHANGELOG  GNUMakefile.tool  GNUfixlex.pl  GNUmakefile  TODO  fixlex.pl  makefile  makefile.tool  worldfoundry_milestone1_checklist.md  worldfoundry_rust_blender_design_spec.md
wftools/iffdump-rs/: Cargo.toml  testdata
wftools/iffdump-rs/src/: dump.rs  error.rs  lib.rs  main.rs  reader.rs
wftools/iffdump-rs/tests/: round_trip.rs
wftools/wf_py/: Cargo.toml  pyproject.toml
wftools/wf_py/src/: lib.rs
(+2069 files in other folders)
